# backend/src/modules/user/user.validations.ts
@@ -1,0 +1,28 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsEmail, IsNotEmpty } from 'class-validator';
+
+export class CreateUserDto {
+    @ApiProperty()
+    @IsEmail()
+    email!: string;
+
+    @ApiProperty()
+    @IsNotEmpty()
+    password!: string;
+}
+
+export class DeleteUserDto {
+    @ApiProperty()
+    @IsEmail()
+    email!: string;
+}
+
+export class UpdatePasswordUserDto {
+    @ApiProperty()
+    @IsEmail()
+    email!: string;
+
+    @ApiProperty()
+    @IsNotEmpty()
+    password!: string;
+}
